--- a/R-Clases/week-1/clase_3/database/docker-compose-mysql.yml
+++ b/R-Clases/week-1/clase_3/database/docker-compose-mysql.yml
@@ -19,4 +19,5 @@ services:
       MYSQL_ROOT_PASSWORD: pass_admin
     ports:
       - 3306:3306
-    volumes: *shared-scripts
+    volumes:
+      - ./scripts/init.sql:/docker-entrypoint-initdb.d/init.sql
