clase 1 -> primera clase de r
instalacion y entorno dev

--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -8,10 +8,18 @@ RUN apt-get update && apt-get install -y \
     libmariadb-dev \
     mariadb-client \
     sqlite3 \
+    wget \
+    fonts-dejavu \
     && rm -rf /var/lib/apt/lists/*
 
-# Establecer carpeta de trabajo
-WORKDIR /workspaces/R-Clases
+# Instalar pandoc
+RUN wget https://github.com/jgm/pandoc/releases/download/3.1.11.1/pandoc-3.1.11.1-1-amd64.deb && \
+    dpkg -i pandoc-3.1.11.1-1-amd64.deb && \
+    rm pandoc-3.1.11.1-1-amd64.deb
 
-# Copiar tu código al contenedor
-COPY ./R-Clases /workspaces/R-Clases
+# Instalar TinyTeX para soporte PDF
+RUN Rscript -e "install.packages('tinytex', repos='https://cloud.r-project.org')" && \
+    Rscript -e "tinytex::install_tinytex()"
+
+# Establecer carpeta de trabajo (volumen se montará desde fuera)
+WORKDIR /workspaces/R-Clases
