--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -5,9 +5,15 @@
     "dockerfile": "Dockerfile"
   },
   "extensions": [
-    "REditorSupport.r"  // <-- mejor soporte que "Ikuyadeu.r"
+    "REditorSupport.r" // <-- mejor soporte que "Ikuyadeu.r"
   ],
-  "forwardPorts": [8000, 3306],
+  "mounts": [
+    "source=${localWorkspaceFolder}/R-Clases,target=/workspaces/R-Clases,type=bind"
+  ],
+  "forwardPorts": [
+    8000,
+    3306
+  ],
   "postCreateCommand": "Rscript -e \"install.packages(c('readr', 'dplyr', 'DBI', 'RMySQL', 'RSQLite', 'plumber', 'languageserver', 'rmarkdown', 'knitr', 'here', 'tidyverse'), repos='https://cloud.r-project.org')\"",
   "workspaceFolder": "/workspaces/R-Clases"
 }
