--- a/.devcontainer/docker-compose.yml
+++ b/.devcontainer/docker-compose.yml
@@ -1,12 +1,12 @@
 version: "3.9"
-
 services:
   r-dev:
     build:
       context: .
       dockerfile: Dockerfile
+    command: tail -f /dev/null   # mantiene el contenedor vivo
     volumes:
-      - ../R-Clases:/workspaces/R-Clases
+      - ./R-Clases:/workspaces/R-Clases
     ports:
-      - "8000:8000"
-      - "3306:3306"
+      - 8000:8000
+      - 3306:3306
