--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -1,5 +1,8 @@
 FROM rocker/r-ver:latest
 
+# Evitar prompts interactivos durante build
+ENV DEBIAN_FRONTEND=noninteractive
+
 # Instalar dependencias del sistema
 RUN apt-get update && apt-get install -y \
     libcurl4-openssl-dev \
@@ -9,8 +12,20 @@ RUN apt-get update && apt-get install -y \
     mariadb-client \
     sqlite3 \
     wget \
+    curl \
+    git \
     fonts-dejavu \
+    python3 \
+    python3-pip \
+    python3-venv \
+    pipx \
     && rm -rf /var/lib/apt/lists/*
+
+# Instalar radian usando pipx (recomendado para aplicaciones Python)
+RUN pipx install radian && pipx ensurepath
+
+# O alternativamente, usar pip con --break-system-packages (menos recomendado)
+# RUN pip3 install --no-cache-dir --break-system-packages radian
 
 # Instalar pandoc
 RUN wget https://github.com/jgm/pandoc/releases/download/3.1.11.1/pandoc-3.1.11.1-1-amd64.deb && \
@@ -21,5 +36,8 @@ RUN wget https://github.com/jgm/pandoc/releases/download/3.1.11.1/pandoc-3.1.11.
 RUN Rscript -e "install.packages('tinytex', repos='https://cloud.r-project.org')" && \
     Rscript -e "tinytex::install_tinytex()"
 
-# Establecer carpeta de trabajo (volumen se montará desde fuera)
+# Agregar pipx y radian al PATH
+ENV PATH="/root/.local/bin:$PATH"
+
+# Establecer carpeta de trabajo
 WORKDIR /workspaces/R-Clases
